--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 mongo_url=mongodb+srv://maafrith1999:maafrith1999@cluster0.1afeahj.mongodb.net/mern-portfolio
+EMAIL=maafrith15919@gmail.com
+EMAIL_PASSWORD=nmrg vnsv ginn ohmw
+RECEIVER_EMAIL=maafrith15919@gmail.com
